--- a/public/app.css
+++ b/public/app.css
@@ -104,9 +104,13 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 }
 
 
-#maincontainer
-{
-	height: 600px;
+#iconcontainer {
+  width: 100%;
+  padding-right: 35%;
+  padding-left: 35%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 75px;
 }
 
 #searchbox
